--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.scss
@@ -42,4 +42,35 @@
         display: flex;
         flex-direction: column;
     }
+    .red-alert {
+        height: 12px;
+        width: 12px;
+        background: red;
+        border-radius: 50%;
+        animation: blink 2s infinite ease-in-out;
+    }
+    .alert-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+    
+    @keyframes blink {
+        0% {
+            background: red;
+            // height: 12px;
+            // width: 12px;
+        }
+        50% {
+            background: rgb(255, 168, 168);
+            // height: 10px;
+            // width: 10px;
+        }
+        100% {
+            background: red;
+            // height: 12px;
+            // width: 12px;
+        }
+    }
 }
