pkt-fe::aligning amount to right

--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.scss
@@ -1,7 +1,7 @@
 :host{
     ::ng-deep.mat-row,
     ::ng-deep.mat-header-row{
-        width: 250% !important;
+        width: 270% !important;
     }
 
     .mat-column-netWeightReleaseOrnament{
@@ -24,8 +24,36 @@
     .mat-column-updateStatus{
         flex: 0 0 5%;
     }
-
     .mat-column-status{
         flex: 0 0 3%;
+    }
+
+    .mat-column-tenure {
+        flex: 0 0 3%;
+    }
+    .mat-column-loanAmount{
+        padding-right: 25px;
+        justify-content: flex-end;
+    }
+    .mat-column-principalAmount{
+        padding-right: 25px;
+        justify-content: flex-end;
+    }
+    .mat-column-totalPaidAmount{
+        padding-right: 25px;
+        justify-content: flex-end;
+        flex: 0 0 5%;
+    }
+    .mat-column-penalInterest{
+        padding-right: 25px;
+        justify-content: flex-end;
+    }
+    .mat-column-interestAmount{
+        padding-right: 25px;
+        justify-content: flex-end;
+    }
+    .mat-column-ornamentReleaseAmount{
+        padding-right: 25px;
+        justify-content: flex-end;
     }
 }
