--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
@@ -48,10 +48,10 @@
                 <ng-container matColumnDef="amount">
                     <mat-header-cell *matHeaderCellDef>Loan Amount</mat-header-cell>
                     <mat-cell *matCellDef="let loan" class="d-block">
-                        <div class="currency">
+                        <div class="currency text-right">
                             {{loan?.customerLoan[0]?.loanAmount | indianCurrencyFormat}}
                         </div>
-                        <div class="currency">
+                        <div class="currency text-right">
                             {{loan?.customerLoan[1]?.loanAmount | indianCurrencyFormat}}
                         </div>
                     </mat-cell>
@@ -151,11 +151,11 @@
                             <ng-container *ngIf="!(loan.partRelease || loan.fullRelease)">
                                 <button *ngxPermissionsOnly="['addQuickPay']" mat-menu-item
                                     (click)="interestEmi(loan)">Quick Pay</button>
-                                    <ng-container *ngIf="show(loan)">
-                                        <button *ngxPermissionsOnly="['addPartPayment']" mat-menu-item
+                                <ng-container *ngIf="show(loan)">
+                                    <button *ngxPermissionsOnly="['addPartPayment']" mat-menu-item
                                         (click)="partPayment(loan)">Part Payment</button>
-                                    </ng-container>
-                               
+                                </ng-container>
+
                                 <!-- <button mat-menu-item (click)="topUp(loan)">Top Up</button> -->
                                 <button *ngxPermissionsOnly="['partReleaseAdd', 'fullReleaseAdd']" mat-menu-item
                                     (click)="jewelleryRelease(loan)">Jewellery
