--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.scss
@@ -20,6 +20,8 @@
     }
     .mat-column-amount{
         flex: 0 0 16% !important;
+        padding-right: 25px;
+        justify-content: flex-end;
     }
     .mat-column-action{
         flex: 0 0 11% !important;
