--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.scss
@@ -21,4 +21,9 @@
     .table-padding-end {
         padding-left: 6%;        
     }
+
+    .table-amount {
+        text-align: right;
+        padding-right: 6%;
+    }
 }
