--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/deposit-list/deposit-list.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/deposit-list/deposit-list.component.scss
@@ -11,7 +11,10 @@
     .mat-column-depositBranchName {
         flex: 0 0 8%;
     }
-
+    .mat-column-depositAmount{
+        padding-right: 25px;
+        justify-content: flex-end;
+    }
     .loanID {
         display: flex;
         flex-direction: column;
