--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/full-release-final/full-release-final.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/full-release-final/full-release-final.component.scss
@@ -1,13 +1,14 @@
 :host{
     ::ng-deep.mat-row,
     ::ng-deep.mat-header-row{
-        width: 250% !important;
+        width: 275% !important;
     }
 
     .mat-column-principalOutstandingAmountLTV{
         display: flex;
         flex-direction: column;
-        flex: 0 0 8%;
+        flex: 0 0 7%;
+        align-items: flex-end;
     }
 
     .mat-column-loanId {
@@ -20,8 +21,46 @@
     .mat-column-partReleaseAmountStatus {
         flex: 0 0 3%;
     }
-
     .mat-column-updateStatus {
         flex: 0 0 5%;
+    }
+
+    .mat-column-tenure{
+        flex: 0 0 3%;
+    }
+    .mat-column-loanAmount{
+        padding-right: 25px;
+        justify-content: flex-end;
+    }
+    .mat-column-principalAmount{
+        padding-right: 25px;
+        justify-content: flex-end;
+        flex: 0 0 6%;
+    }
+    .mat-column-totalPayableAmount{
+        padding-right: 25px;
+        justify-content: flex-end;
+        flex: 0 0 6%;
+    }
+    .mat-column-penalInterest{
+        padding-right: 25px;
+        justify-content: flex-end;
+    }
+    .mat-column-interestAmount{
+        padding-right: 25px;
+        justify-content: flex-end;
+        flex: 0 0 5%;
+    }
+    .mat-column-ornamentReleaseAmount{
+        padding-right: 25px;
+        justify-content: flex-end;
+    }
+    .mat-column-previousLTV{
+        padding-right: 25px;
+        justify-content: flex-end;
+    }
+    .mat-column-currentLTV{
+        padding-right: 25px;
+        justify-content: flex-end;
     }
 }
