--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
@@ -67,7 +67,9 @@
                     <mat-cell *matCellDef="let item">{{item?.masterLoan?.partnerBranch?.name }}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="principalAmount">
-                    <mat-header-cell *matHeaderCellDef>Principal Outstanding</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>
+                        <div class="text-right"> Principal Outstanding</div>
+                    </mat-header-cell>
                     <mat-cell *matCellDef="let item">{{item.masterLoan.outstandingAmount }}</mat-cell>
                 </ng-container>
 
