--- a/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
@@ -236,6 +236,26 @@
                             </div>
                         </div>
                     </div>
+                    <div class="filtered-data" *ngIf="filteredList?.cronType">
+                        <div class="filtered-title">By Status</div>
+                        <div class="d-flex">
+                            <div class="filtered-value" *ngFor="let item of filteredList?.cronType; let i = index;">
+                                <span>{{item?.name | titlecase}}</span>
+                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
+                                    (click)="clearFilter('cronType',i)">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="filtered-data" *ngIf="filteredList?.date">
+                        <div class="filtered-title">By Date</div>
+                        <div class="d-flex">
+                            <div class="filtered-value" >
+                                <span>{{filteredList?.date | date:'mediumDate'}}</span>
+                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
+                                    (click)="clearFilter('date')">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </kt-portlet-body>
