--- a/gold-loan-backend/templates/pawnTicket-secure-template.html
+++ b/gold-loan-backend/templates/pawnTicket-secure-template.html
@@ -249,10 +249,9 @@
 
                     </tr>
                     <tr>
-                        <td>09765422510</td>
-                        <td>AUGMONT GOLDTECH PRIVATE
-                            LIMITED</td>
-                        <td>IFSC0000111</td>
+                        <td class="align-top text-center">09765422510</td>
+                        <td class="align-top text-center">AUGMONT GOLDTECH PRIVATE LIMITED</td>
+                        <td class="align-top text-center">IFSC0000111</td>
                     </tr>
                 </table>
             </div>
